kube/ingress/gateway.yml
# "Врата" для трафика, умеет пропускать/отклонять трафик
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pokemon-service-gateway
spec:
  selector:
    # к какому ingressgateway привязаны
    app: istio-ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
