kube/ingress/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pokemon-service-ingress
spec:
  hosts:
    - "*"
  gateways:
    - pokemon-service-gateway
  http:
    - route:
        - destination:
            # это ХОСТ, а не ИМЯ СЕРВИСА!
            host: nginx-cip
